objects/COMPANY__c.object
<CustomObject>
    <fields>
        <fullName>Name__c</fullName>
        <label>Name</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rating_Count__c</fullName>
        <label>Rating Count</label>
        <summarizedField>CustomerDet__c.Rating__c</summarizedField>
        <summaryForeignKey>CustomerDet__c.COMPANYName__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>sfxId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>sfxId</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>COMPANY</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>COMPANY Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>COMPANYS</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>